--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,12 @@
 {% extends "base.html" %}
-{% block title %}File Uploader{% endblock %}
+{% block title %}我爱读Paper{% endblock %}
 
 {% block page_content %}
 <div class="container">
-    <h1>File Uploader</h1>
+    <h1>我爱读Paper</h1>
     <br>
     <blockquote>
-        <p>File Upload widget with multiple file selection, drag&amp;drop support, progress bars, validation and preview images, audio and video for jQuery.<br>
-        Supports cross-domain, chunked and resumable file uploads and client-side image resizing.<br>
-        Works with any server-side platform (PHP, Python, Ruby on Rails, Java, Node.js, Go etc.) that supports standard HTML form file uploads.</p>
+        <p>这个工具可以根据你的pdf文档生成一个页面，在显示文档内容的同时提供了方便的词典工具，能够帮助你阅读英文文档</p>
     </blockquote>
     <br>
     <!-- The file upload form used as target for the file upload widget -->
@@ -24,19 +22,6 @@
                     <span>Add files...</span>
                     <input type="file" name="file" multiple>
                 </span>
-                <button type="submit" class="btn btn-primary start">
-                    <i class="glyphicon glyphicon-upload"></i>
-                    <span>Start upload</span>
-                </button>
-                <button type="reset" class="btn btn-warning cancel">
-                    <i class="glyphicon glyphicon-ban-circle"></i>
-                    <span>Cancel upload</span>
-                </button>
-                <button type="button" class="btn btn-danger delete">
-                    <i class="glyphicon glyphicon-trash"></i>
-                    <span>Delete</span>
-                </button>
-                <input type="checkbox" class="toggle">
                 <!-- The global file processing state -->
                 <span class="fileupload-process"></span>
             </div>
@@ -60,12 +45,9 @@
         </div>
         <div class="panel-body">
             <ul>
-                <li>The maximum file size for uploads in this demo is <strong>50 MB</strong> (default file size is unlimited).</li>
-                <li>Only image files (<strong>TXT, JPG, GIF, PNG, BMP, RAR, ZIP, 7ZIP, DOC, DOCX</strong>) are allowed in this website.</li>
-                
-                <li>You can <strong>drag &amp; drop</strong> files from your desktop on this webpage (see <a href="https://github.com/blueimp/jQuery-File-Upload/wiki/Browser-support">Browser support</a>).</li>
-                <li>Please refer to the <a href="https://github.com/blueimp/jQuery-File-Upload">project website</a> and <a href="https://github.com/blueimp/jQuery-File-Upload/wiki">documentation</a> for more information.</li>
-                <li>Built with Twitter's <a href="http://twitter.github.com/bootstrap/">Bootstrap</a> CSS framework and Icons from <a href="http://glyphicons.com/">Glyphicons</a>.</li>
+                <li>最大支持50M</li>
+                <li>目前只支持<strong>PDF</strong>格式</li>
+                <li>你可以直接拖动文件到页面完成上传</li>
             </ul>
         </div>
     </div>
@@ -139,6 +121,12 @@
         </td>
         <td>
             <span class="size">{%=o.formatFileSize(file.size)%}</span>
+        </td>
+        <td>
+            <span class="size"><a href="/file/{%=file.hash%}" target="_blank">查阅</a></span>
+        </td>
+        <td>
+            <span class="size">请牢记该地址!</span>
         </td>
         <td>
             {% if (file.deleteUrl) { %}
